# soda

./: .gitignore  CNAME  README.md  bump-version  index.html  index.md  params.json  repository.md
src/: .gitignore  CMakeLists.txt  graphFile  treeFile
src/cl/: CMakeLists.txt
src/cl/SoDATools/: CMakeLists.txt
src/cl/SoDATools/cluster-dump/: CMakeLists.txt  main.cpp
src/cl/SoDATools/clustering/: CMakeLists.txt  main.cpp
src/cl/SoDATools/coverage/: CMakeLists.txt  main.cpp
src/cl/SoDATools/coverage-difference/: CMakeLists.txt  main.cpp
src/cl/SoDATools/fl-score/: CMakeLists.txt  main.cpp
src/cl/SoDATools/instrumentserver/: CAddressResolver.cpp  CAddressResolver.h  CMakeLists.txt  CThread.cpp  CTraceData.cpp  CTraceData.h  CTraceLogger.cpp  CTraceLogger.h  main.cpp
src/cl/SoDATools/mutation-metric/: CMakeLists.txt  main.cpp
src/cl/SoDATools/mutation-prioritization/: CMakeLists.txt  main.cpp
src/cl/SoDATools/mutation-score/: CMakeLists.txt  main.cpp
src/cl/SoDATools/sample/: CPrioritizationGeneralIgnore.cpp  CPrioritizationGeneralIgnore.h  main.cpp
src/cl/SoDATools/selections/: CComputeSelectionMetrics.h  CMakeLists.txt  CSelectionsPluginManager.h  main.cpp
src/cl/SoDATools/test-selection-statistics/: CDataManager.cpp  CDataManager.h  CMakeLists.txt  CSelectionStatistics.cpp  CSelectionStatistics.h  main.cpp
src/cl/SoDATools/test-selections/: CComputeSelectionMetrics.cpp  CComputeSelectionMetrics.h  CMakeLists.txt  main.cpp  sample.json
src/cl/SoDATools/test-suite-metrics/: CClusterDefinition.cpp  CClusterDefinition.h  CMakeLists.txt  CTestSuiteMetricsPluginManager.cpp  CTestSuiteMetricsPluginManager.h  main.cpp
src/cl/SoDATools/test-suite-prioritization/: CMakeLists.txt  main.cpp
src/cl/SoDATools/test-suite-score/: CMakeLists.txt  CTestSuiteScore.cpp  main.cpp  selected-revs-gen.ph
src/cl/SoDATools/test-suite-selections/: CComputeSelectionMetrics.cpp  CMakeLists.txt  CRevisionFilters.h  main.cpp
src/cmake/: lcov.cmake
src/lib/SoDA/: CMakeLists.txt
src/lib/SoDAEngine/: CMakeLists.txt
src/lib/SoDATools/: CMakeLists.txt
src/plugin/: CMakeLists.txt  plugin-base-gen.ph
src/plugin/bugset-reader/: CMakeLists.txt
src/plugin/bugset-reader/csv-file/: CMakeLists.txt  CsvFileBugsetReaderPlugin.cpp  CsvFileBugsetReaderPlugin.h
src/plugin/changeset-reader/: CMakeLists.txt
src/plugin/changeset-reader/one-revision-per-file/: CMakeLists.txt  OneRevisionPerFileChangesetReaderPlugin.cpp  OneRevisionPerFileChangesetReaderPlugin.h
src/plugin/coverage-reader/: CMakeLists.txt
src/plugin/coverage-reader/annotation-java/: AnnotationJavaCoverageReaderPlugin.cpp  AnnotationJavaCoverageReaderPlugin.h  CMakeLists.txt
src/plugin/coverage-reader/emma-java/: CMakeLists.txt  EmmaJavaCoverageReaderPlugin.cpp  EmmaJavaCoverageReaderPlugin.h
src/plugin/coverage-reader/gcov/: CMakeLists.txt  GcovCoverageReaderPlugin.cpp  GcovCoverageReaderPlugin.h
src/plugin/coverage-reader/istanbul-js/: CMakeLists.txt  IstanbulJsCoverageReaderPlugin.cpp  IstanbulJsCoverageReaderPlugin.h
src/plugin/coverage-reader/jacoco-java/: CMakeLists.txt  JacocoJavaCoverageReaderPlugin.cpp  JacocoJavaCoverageReaderPlugin.h
src/plugin/coverage-reader/node-js/: CMakeLists.txt  NodeJsCoverageReaderPlugin.cpp  NodeJsCoverageReaderPlugin.h
src/plugin/coverage-reader/one-test-per-file/: CMakeLists.txt  OneTestPerFileCoverageReaderPlugin.cpp  OneTestPerFileCoverageReaderPlugin.h
src/plugin/coverage-reader/simple-isntrumentation-listener-java/: CMakeLists.txt  SimpleInstrumentationListenerCoverageReaderPlugin.cpp  SimpleInstrumentationListenerCoverageReaderPlugin.h
src/plugin/fault-localization-technique/: CMakeLists.txt
src/plugin/fault-localization-technique/common/: CMakeLists.txt  CommonFaultLocalizationTechniquePlugin.cpp  CommonFaultLocalizationTechniquePlugin.h
src/plugin/fault-localization-technique/dstar/: CMakeLists.txt  DStarFaultLocalizationTechniquePlugin.cpp  DStarFaultLocalizationTechniquePlugin.h
src/plugin/fault-localization-technique/ochiai/: CMakeLists.txt  OchiaiFaultLocalizationTechniquePlugin.cpp  OchiaiFaultLocalizationTechniquePlugin.h
src/plugin/fault-localization-technique/tarantula/: CMakeLists.txt  TarantulaFaultLocalizationTechniquePlugin.cpp  TarantulaFaultLocalizationTechniquePlugin.h
src/plugin/mutation-metric/: CMakeLists.txt
src/plugin/mutation-metric/mutation-category/: CMakeLists.txt  MutationCategoryMetricPlugin.cpp  MutationCategoryMetricPlugin.h
src/plugin/mutation-metric/results-score/: CMakeLists.txt  ResultsScoreMetricPlugin.cpp  ResultsScoreMetricPlugin.h
src/plugin/results-reader/: CMakeLists.txt
src/plugin/results-reader/dejagnu-one-revision-per-file/: CMakeLists.txt  DejaGNUOneRevisionPerFileResultsReaderPlugin.cpp  DejaGNUOneRevisionPerFileResultsReaderPlugin.h
src/plugin/test-suite-cluster/: CMakeLists.txt
src/plugin/test-suite-cluster/coverage/: CMakeLists.txt  CoverageTestSuiteClusterPlugin.cpp  CoverageTestSuiteClusterPlugin.h
src/plugin/test-suite-cluster/coverage-matrix-generator/: CMakeLists.txt  CoverageMatrixGeneratorTestSuiteClusterPlugin.cpp  CoverageMatrixGeneratorTestSuiteClusterPlugin.h
src/plugin/test-suite-cluster/duplation/: CMakeLists.txt  DuplationTestSuiteClusterPlugin.cpp  DuplationTestSuiteClusterPlugin.h
src/plugin/test-suite-cluster/hamming/: CMakeLists.txt  HammingTestSuiteClusterPlugin.cpp  HammingTestSuiteClusterPlugin.h
src/plugin/test-suite-cluster/label-test-codeelements/: CMakeLists.txt  LabelTestCodeElementsClusterPlugin.cpp  LabelTestCodeElementsClusterPlugin.h
src/plugin/test-suite-cluster/ochiai-dice-jaccard/: CMakeLists.txt  Ochiai_Dice_JaccardTestSuiteClusterPlugin.cpp  Ochiai_Dice_JaccardTestSuiteClusterPlugin.h  cluster.cpp  cluster.hpp
src/plugin/test-suite-metric/: CMakeLists.txt
src/plugin/test-suite-prioritization/: CMakeLists.txt
src/plugin/test-suite-reduction/: CMakeLists.txt
src/sample/: cchain.json  cgraph.json  ctree.json
src/scripts/: plugin-base-gen.ph  plugin-base-gen.py  test-suite-score-json-gen.py
src/test/lib/: CMakeLists.txt  SoDATest.cpp
(+445 files in other folders)
