add_subdirectory(bugset-reader)
add_subdirectory(changeset-reader)
add_subdirectory(coverage-reader)
add_subdirectory(fault-localization-technique)
add_subdirectory(mutation-metric)
add_subdirectory(results-reader)
add_subdirectory(test-suite-cluster)
add_subdirectory(test-suite-metric)
add_subdirectory(test-suite-prioritization)
add_subdirectory(test-suite-reduction)
