add_subdirectory(fault-detection)
add_subdirectory(fault-localization)
add_subdirectory(f-measure)
add_subdirectory(specialization)
add_subdirectory(partition-metric)
add_subdirectory(tpce)
add_subdirectory(partition-efficiency)
add_subdirectory(coverage-efficiency)
add_subdirectory(uniqueness)
add_subdirectory(clustering-metrics)

