add_subdirectory(general-ignore)
add_subdirectory(random-ignore)
add_subdirectory(additional-general-ignore)
add_subdirectory(flint)
add_subdirectory(raptor)
add_subdirectory(additional-with-resets)
add_subdirectory(partition-metric)
add_subdirectory(partition-with-resets)
add_subdirectory(duplation)
add_subdirectory(duplation-prime)